# OAIT

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  MVP_SUMMARY.md  README.md  SPECIFICATION.md  STATUS.md  TODO.md  discussion.txt  learnings.md  pyproject.toml  pytest.ini  requirements.txt  setup.sh  start_server.py
docs/: DATA_DICTIONARY.md  PWA.md  SESSION_SUMMARY.md  TESTING.md  TTS_IMPLEMENTATION.md
examples/: README.md  basic_usage.py
src/oait/: __init__.py  config.py
src/oait/api/: openrouter.py
src/oait/audio/: stream_handler.py  whisper_stt.py
src/oait/cognitive/: __init__.py  loop.py  tool_loop.py  triggers.py
src/oait/models/: __init__.py  data_models.py  repository.py
src/oait/server/: README.md  app.py  websocket_server.py
src/oait/server/static/: index.html  launcher.html  manifest.json  sw.js
src/oait/server/static/components/: ai.html  camera.html  controls.html  debug.html  transcript.html  whiteboard.html
src/oait/tools/: __init__.py  ai_tools.py  pedagogical.py
src/oait/vision/: analyzer.py  preprocessor.py
tests/integration/: test_component_integration.py
tests/unit/: test_config.py  test_models.py  test_pedagogical_tools.py
